infra/k3s/8-App-mon-ingr/vp/app-combined.yml
# 
# 1. Deployment
# 2. Service as ClusterIP
# 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: alexstue/jul24-petclinic:latest-db
        # imagePullPolicy: Always
        resources:
          requests:
            memory: 250Mi
            cpu: 500m
          limits:
            memory: 500Mi
            cpu: 1000m
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: app-volume
          mountPath: /app
      volumes:
      - name: app-volume
        hostPath:
          path: .  # The path to your application files
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic
  namespace: dev
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer # tried before with loadbalancer 
---
