infra/k3s/8-App-mon-ingr/vp/ingress-combined.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: dev
  annotations: # important !!
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/tls: "true"  # Enabling TLS
    # traefik.ingress.kubernetes.io/tls.secret: "petclinic-secret-tls"  # not needed as its on the repo in this repo
spec:
  tls:
  - hosts:
    - petclinic-dev.simply-stu.de
    secretName: petclinic-tls  # Name of the TLS secret
  rules:
  - host: petclinic-dev.simply-stu.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic
            port:
              number: 8080
